| Bug #6139 | UNION doesn't understand collate in the column of second select | ||
|---|---|---|---|
| Submitted: | 18 Oct 2004 10:50 | Modified: | 18 Oct 2004 13:00 |
| Reporter: | Victor Vagin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | |
| Assigned to: | Alexander Barkov | CPU Architecture: | Any |
[18 Oct 2004 10:50]
Victor Vagin
[18 Oct 2004 13:00]
Alexander Barkov
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
