Bug #6139 UNION doesn't understand collate in the column of second select